--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "cleentfaar/slack",
+  "name": "ojathelonius/flarum-slack",
   "description": "Access your Slack Team's API through PHP objects",
   "homepage": "http://cleentfaar.github.io/slack/",
   "keywords": [
@@ -20,8 +20,8 @@
     "php": ">=5.5",
     "ext-curl": "*",
     "jms/serializer": "~0.16",
-    "symfony/event-dispatcher": "~2.2",
-    "symfony/yaml": "~2.2",
+    "symfony/event-dispatcher": "~3.0",
+    "symfony/yaml": "~3.0",
     "guzzlehttp/guzzle": "~6.0",
     "doctrine/collections": "~1.2"
   },
